crates/reinhardt-pages/tests/ui/style/fail/missing_default.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = style! {
	vars {
		accent: Color;
	}
	.card {
		color: red;
	}
};
fn main() {}
