crates/reinhardt-pages/tests/ui/style/fail/missing_default.stderr
error: component variable `accent` is missing a default; add `= <typed value>`
 --> tests/ui/style/fail/missing_default.rs:6:3
  |
6 |         accent: Color;
  |         ^^^^^^
